--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"helmet": "^5.1.0",
 		"hpp": "^0.2.3",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.3",
 		"mongoose": "^6.4.0",
 		"nodemailer": "^6.7.5",
 		"nodemon": "^2.0.16",
