--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"colors": "^1.4.0",
 		"cors": "^2.8.5",
 		"delay": "^5.0.0",
+		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-mongo-sanitize": "^2.2.0",
 		"express-rate-limit": "^6.4.0",
